[package]
name = "karma-p2p-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures-lite = "1.12.0"

karma-p2p = { path = "../karma-p2p" }
serde = "1.0.136"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcDataChannel",
  "RtcDataChannelEvent",
]


