[package]
name = "karma-p2p-wasm"
version = "0.1.2"
edition = "2021"
description = "webrtc wasm in browser impl of karma."
license = "MIT"
repository = "https://github.com/tiannian/karma.git"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.12.0"
js-sys = "0.3.56"

karma-p2p = { path = "../karma-p2p", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcConfiguration",
]


