[package]
name = "karma-p2p-webrtc"
version = "0.1.2"
edition = "2021"
description = "webrtc host impl of karma."
license = "MIT"
repository = "https://github.com/tiannian/karma.git"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"

futures-lite = "1.12.0"
serde = { version = "1.0.136", features = ["derive"] }

karma-p2p = { path = "../karma-p2p", version = "0.1" }
webrtc = "0.4.0"
smol = "1.2.5"
bytes = "1.1.0"

