[package]
name = "karma-p2p"
version = "0.1.2"
edition = "2021"
description = "core p2p library for karma."
license = "MIT"
repository = "https://github.com/tiannian/karma.git"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.12.0"
